Fixed invisible selection color

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,3 +7,8 @@ search: false
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+::selection {
+  background-color: #CFD8D7; /* Set your desired background color for highlighted text */
+  color: #000000; /* Set your desired text color when highlighted, usually white for contrast */
+}
